--- a/portfolio.html
+++ b/portfolio.html
@@ -10,37 +10,104 @@
     <!--Bootstrap CSS Framework Link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/stylep.css">
  
 
 </head>
 
 
   <body>
-          <nav class="navbar  navbar-expand-lg navbar-light  bg-light border mx-0 mb-5 py-0" >
+          <nav class="navbar  navbar-expand-lg navbar-light  bg-white border mx-0 mb-5 py-0" >
 
-                    <nav class=" mx-auto navbar navbar-light bg-light pt-0 pb-0 " style="width:960px;"  > 
+                    <nav class=" mx-auto navbar navbar-light bg-white pt-0 pb-0 " style="width:960px;"  > 
                           
                          <div class="navbar-text navbar-light bg-info text-white px-3  py-3 my-0 "  >
                         <h2> Milena Mihneva </h2>
                          </div>
                          <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarText">
                           <ul class="navbar-nav list-group-horizontal ">
-                            <li class="nav-item active">
-                              <a class="nav-link" href="#">About </a>
+                            <li class="nav-item ">
+                              <a class="nav-link" href="index.html">About </a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Portfolio</a>
+                              <a class="nav-link" href="#portfolio">Portfolio</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Contact</a>
+                              <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                           </ul>
                         </div> 
               </nav> 
             </nav>
-            <div class="card-body mx-auto bg-white " style="width:930px">
-                <h1 class="card-title pt-0 pb-0 pl-3 mt-2 text-info ">Portfolio</h1>
+            <div class="card-body mx-auto bg-white my-5" style="width:65%">
+                <h1 class="card-title pt-0 pb-0 pl-3 mt-1 text-info ">Portfolio</h1>
 
                <hr>
+               <!--Pictures -->
+           
+                <!-- Game Photos -->
+                <div class="container mx-5 ">
+                  <div class="row ">
+                    <div class="col-sm-6" >
+                      <div class="card my-3" style="width: 18rem;">
+                        <img src="assets/images/hang1.jpeg" class="card-img-top" alt="Hangman">
+                        <div class="card-body bg-info">
+                          <p class="card-text text-white text-center">Hangman</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card my-3" style="width: 18rem;" >
+                        <img src="assets/images/asphalt.jpg" class="card-img-top" alt="RPG">
+                        <div class="card-body bg-info">
+                          <p class="card-text text-white text-center ">RPG Game</p>
+                        </div>
+                    </div>
+                  </div>
+                  </div>
+                  </div>
 
+                  <div class="container mx-5">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <div class="card my-3" style="width: 18rem;" >
+                        <img src="assets/images/max.jpg" class="card-img-top" alt="Trivia">
+                        <div class="card-body bg-info">
+                          <p class="card-text text-white text-center">Trivia</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card my-3" style="width: 18rem;" >
+                        <img src="assets/images/DesertIsland.jpg" class="card-img-top" alt="Rutgers">
+                        <div class="card-body bg-info">
+                          <p class="card-text text-white text-center">Rutgers Info Widges</p>
+                        </div>
+                    </div>
+                  </div>
+                  </div>
+                  </div>
+                  <div class="container mx-5 my-3" >
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <div class="card" style="width: 18rem;" >
+                        <img src="assets/images/rock.jpg" class="card-img-top" alt="Rock">
+                        <div class="card-body bg-info">
+                          <p class="card-text text-white text-center">Rock Paper Scissors</p>
+                        </div>
+                    </div>
+                    </div>
+                   </div>
+                  </div>
+    </div>
+
+   <!-- Footer  -->
+   <nav class="navbar fixed-bottom navbar-light bg-info my-5 ">
+    <nav class="navbar fixed-bottom navbar-light bg-dark my-0 p-3">
+    <a class=" navbar-brand mx-auto text-white " href="#">Copyright@</a>
+    </nav>
+</nav>
+   
+              </body>
+              </html>
  
