--- a/contact.html
+++ b/contact.html
@@ -64,12 +64,8 @@
               </form>
             </div>
          </div>
-             <!-- Footer  -->
-   <nav class="navbar fixed-bottom navbar-light bg-info my-5 ">
-    <nav class="navbar fixed-bottom navbar-light bg-dark my-0 p-3">
-    <a class=" navbar-brand mx-auto text-white " href="#">Copyright@</a>
-    </nav>
-</nav>
+
+<footer class="footer">Copyright &copy;</footer>
    
               </body>
               </html>
