--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <title>Milena Mihneva</title>
     <meta charset="UTF-8">
     <!--Web Page with a viewport meta tag-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
    
     <!--Bootstrap CSS Framework Link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -102,11 +102,9 @@
     </div>
 
    <!-- Footer  -->
-   <nav class="navbar fixed-bottom navbar-light bg-info my-5 ">
-    <nav class="navbar fixed-bottom navbar-light bg-dark my-0 p-3">
-    <a class=" navbar-brand mx-auto text-white " href="#">Copyright@</a>
-    </nav>
-</nav>
+  
+   <footer class="footer">Copyright &copy;</footer>
+
    
               </body>
               </html>
